RESOLVED FIXED291184
Never suppress HDR in full screen videos
https://bugs.webkit.org/show_bug.cgi?id=291184
Summary Never suppress HDR in full screen videos
Gerald Squelart
Reported 2025-04-07 00:18:57 PDT
Never suppress HDR in full screen videos. rdar://146997228
Attachments
Gerald Squelart
Comment 1 2025-04-07 01:00:50 PDT
EWS
Comment 2 2025-04-08 04:39:25 PDT
Committed 293408@main (4422cd4258a0): <https://commits.webkit.org/293408@main> Reviewed commits have been landed. Closing PR #43733 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.