Never suppress HDR in full screen videos https://bugs.webkit.org/show_bug.cgi?id=291184 rdar://146997228

Reviewed by Mike Wyrzykowski.

When the media element's full screen mode changes, update the player's
dynamic range limit accordingly, ensuring that full screen videos are
never limited/constrained/suppressed.

* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::computePlayerDynamicRangeLimit const):
(WebCore::HTMLMediaElement::updatePlayerDynamicRangeLimit const):
(WebCore::HTMLMediaElement::dynamicRangeLimitDidChange):
(WebCore::HTMLMediaElement::shouldSuppressHDRDidChange):
(WebCore::HTMLMediaElement::setFullscreenMode):
* Source/WebCore/html/HTMLMediaElement.h:

Canonical link: https://commits.webkit.org/293408@main