Source/WebCore/html/HTMLMediaElement.h
@@ -1137,6 +1137,7 @@ private:
 
     bool shouldDisableHDR() const;
     WEBCORE_EXPORT PlatformDynamicRangeLimit computePlayerDynamicRangeLimit() const;
+    void updatePlayerDynamicRangeLimit() const;
 
     bool shouldLogWatchtimeEvent() const;
     bool isWatchtimeTimerActive() const;
